# file-virt

./: Cargo.toml  file.wasm  index.js  package-lock.json  package.json  virt.wasm
file/: file.core.wasm  file.d.ts  file.js
src/: bindings.rs  lib.rs
virt/: virt.core4.wasm  virt.js
wit/: world.wit
