[package]
name = "file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
proxy = true
[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = ["realloc"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:file"

[package.metadata.component.target.dependencies]
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
